--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,5 @@
 export("initDict",
+       "getDict",
        "getDictInstance",
        "getIndexTerms",
        "getFilterTypes",
@@ -8,4 +9,5 @@ export("initDict",
        "getSynsets",
        "getSynonyms",
        "getWord",
-       "synonyms")
+       "synonyms",
+       "setDict")
