--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,21 +1,23 @@
 Package: wordnet
 Title: WordNet Interface
-Version: 0.1-7
-Date: 2011-02-10
-Author: Ingo Feinerer, Kurt Hornik
-Maintainer: Kurt Hornik <Kurt.Hornik@R-project.org>
-Imports: rJava (>= 0.6-3)
-SystemRequirements: Java (>= 5.0), WNdb-3.0.tar.gz from
-        wordnet.princeton.edu
+Version: 0.1-8
+Authors@R: c(person("Ingo", "Feinerer", role = "aut"), person("Kurt",
+        "Hornik", role = c("aut", "cre"), email =
+        "Kurt.Hornik@R-project.org"))
 Description: An interface to WordNet using the Jawbone Java API to
-        WordNet. WordNet is an on-line lexical reference system
+        WordNet.  WordNet is an on-line lexical reference system
         developed by the Cognitive Science Laboratory at Princeton
         University. Its design is inspired by current psycholinguistic
         theories of human lexical memory. English nouns, verbs,
         adjectives and adverbs are organized into synonym sets, each
         representing one underlying lexical concept. Different
         relations link the synonym sets.
+Imports: rJava (>= 0.6-3)
+SystemRequirements: Java (>= 5.0), WNdb-3.0.tar.gz from
+        wordnet.princeton.edu
 License: MIT
-Packaged: 2011-02-10 17:33:53 UTC; hornik
+Packaged: 2012-12-22 12:55:19 UTC; hornik
+Author: Ingo Feinerer [aut], Kurt Hornik [aut, cre]
+Maintainer: Kurt Hornik <Kurt.Hornik@R-project.org>
 Repository: CRAN
-Date/Publication: 2011-02-10 19:18:58
+Date/Publication: 2012-12-22 14:14:19
